plugins {
	id 'java'
}

group = 'study'
version = '0.0.1-SNAPSHOT'

java.sourceCompatibility = '17'

configurations {
}

repositories {
	mavenCentral()
}

dependencies {
}

tasks.named('test') {
	useJUnitPlatform()
}
